# UC

./: Cargo.toml  README.md
src/: cache.rs  executor.rs  main.rs  planner.rs  scanner.rs
src/detector/: ai.rs  extensions.rs  heuristics.rs  mod.rs
src/resolver/: cpp.rs  csharp.rs  generic.rs  java.rs  mod.rs
