[package]
name = "uc"
version = "0.1.0"
edition = "2021"
description = "Universal Compiler — zero-config build tool"
authors = []

[[bin]]
name = "uc"
path = "src/main.rs"

[dependencies]
# CLI argument parsing
clap = { version = "4", features = ["derive", "color"] }

# Error handling
anyhow = "1"
thiserror = "1"

# Serialization (lockfile, cache)
serde = { version = "1", features = ["derive"] }
serde_json = "1"

# File walking
walkdir = "2"

# Glob / pattern matching
glob = "0.3"

# Colored terminal output
colored = "2"

# SHA-256 for file hashing (incremental builds)
sha2 = "0.10"
hex = "0.4"

# Regex for import/include parsing
regex = "1"

# Lazy static initialization
once_cell = "1"

# Cross-platform home dir
dirs = "5"

# Reqwest for optional AI fallback (feature-gated)
reqwest = { version = "0.11", features = ["blocking", "json"], optional = true }

[features]
default = []
ai = ["reqwest"]

[profile.release]
opt-level = 3
lto = true
strip = true
